[package]
name = "devp2p_handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
futures = "0.3"
async-std = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4.6"
secstr = "0.5"
rand = "0.8.5"
